// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de generar la imagen por default 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;

exports[`ProductImage debe de mostrar la imagen del producto 2 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
